--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://localhost:3000",
-  "name": "Portfolio-Mohamed",
+  "name": "react-portfolio-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
